<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.htr3n</groupId>
  <artifactId>java-templates</artifactId>
  <version>0.0.1</version>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>
    <maven.min.version>3.8.0</maven.min.version>

    <version.org.lombok>1.18.34</version.org.lombok>
    <version.org.mapstruct>1.6.2</version.org.mapstruct>
    <!--
    Modularized JDK support for testing.
    -->
    <modular.jdk.args>
      --add-exports=java.desktop/sun.awt=ALL-UNNAMED
      --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
      --add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED
      --add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED
      --add-exports=jdk.naming.dns/com.sun.jndi.dns=ALL-UNNAMED
      --add-opens=java.base/java.io=ALL-UNNAMED
      --add-opens=java.base/java.lang=ALL-UNNAMED
      --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
      --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
      --add-opens=java.base/java.net=ALL-UNNAMED
      --add-opens=java.base/java.security=ALL-UNNAMED
      --add-opens=java.base/java.util=ALL-UNNAMED
      --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
      --add-opens=java.management/javax.management=ALL-UNNAMED
      --add-opens=java.naming/javax.naming=ALL-UNNAMED
    </modular.jdk.args>
  </properties>

  <modules>
    <module>hexagon</module>
    <module>jakartaee-api</module>
    <module>java-exec</module>
    <module>java-jar</module>
    <module>springboot-app</module>
    <module>springboot-standalone</module>
    <module>quarkus-app</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-enforcer-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
      </plugin>
    </plugins>

    <pluginManagement>
      <!-- =================================================================== -->
      <!-- ALWAYS pin down essential plugin versions to ensure reliable builds -->
      <!-- =================================================================== -->
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.4.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <configuration>
            <release>${maven.compiler.release}</release>
            <encoding>${project.build.sourceEncoding}</encoding>
            <annotationProcessorPaths>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${version.org.lombok}</version>
              </path>
              <!-- This is needed when using Lombok 1.18.16 and above -->
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-mapstruct-binding</artifactId>
                <version>0.2.0</version>
              </path>
              <path>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${version.org.mapstruct}</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.8.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.3</version>
        </plugin>
        <!--
        https://maven.apache.org/enforcer/maven-enforcer-plugin/
        The Enforcer plugin provides goals to control certain environmental constraints
        such as Maven version, JDK version and OS family along with many more built-in
        rules and user created rules.
        -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.5.0</version>
          <executions>
            <execution>
              <id>enforce-maven</id>
              <goals>
                <goal>enforce</goal>
              </goals>
              <configuration>
                <rules>
                  <!-- Built-in Rules -->
                  <banDependencyManagementScope>
                    <message>Best practice is to not define scope in dependencyManagement but
                      dependencies section!
                    </message>
                  </banDependencyManagementScope>
                  <banDistributionManagement>
                    <message>A module must not have the distributionManagement section!</message>
                  </banDistributionManagement>
                  <requireMavenVersion>
                    <version>[${maven.min.version}, )</version>
                    <message>[ERROR] The supported version of Maven is ${maven.min.version} or
                      higher
                    </message>
                  </requireMavenVersion>
                  <requireJavaVersion>
                    <version>${maven.compiler.release}</version>
                    <message>[ERROR] The supported version of Java is ${maven.compiler.release} or
                      higher
                    </message>
                  </requireJavaVersion>
                  <requirePluginVersions>
                    <message>Best practice is to always define plugin versions!</message>
                  </requirePluginVersions>
                  <bannedDependencies>
                    <excludes>
                      <!-- This old JUnit 3 conflicts with JUnit 5 vintage -->
                      <exclude>junit:junit:[3.8.1]</exclude>
                    </excludes>
                  </bannedDependencies>
                  <!-- Extra Rules -->
                  <banCircularDependencies/>
                </rules>
              </configuration>
            </execution>
          </executions>
          <!--
              MojoHaus - For extra enforcer rules
              https://www.mojohaus.org/extra-enforcer-rules/
          -->
          <dependencies>
            <dependency>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>extra-enforcer-rules</artifactId>
              <version>1.9.0</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>3.5.1</version>
          <configuration>
            <argLine>${modular.jdk.args}</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.10.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.21.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.1</version>
          <configuration>
            <argLine>${modular.jdk.args}</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.4.0</version>
          <configuration>
            <failOnMissingWebXml>false</failOnMissingWebXml>
          </configuration>
        </plugin>

        <!--
        Spotless: Code Formatting Plugin
        https://github.com/diffplug/spotless/tree/main/plugin-maven
        -->
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>2.43.0</version>
          <executions>
            <execution>
              <id>code-format-apply</id>
              <phase>validate</phase>
              <goals>
                <goal>apply</goal>
              </goals>
            </execution>
            <execution>
              <id>code-format-check</id>
              <phase>compile</phase>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <!-- https://github.com/diffplug/spotless/tree/main/plugin-maven#java -->
            <java>
              <includes>
                <include>src/main/java/**/*.java</include>
                <include>src/test/java/**/*.java</include>
              </includes>
              <!-- apply google-java-format -->
              <googleJavaFormat>
                <version>1.18.1</version>
                <style>GOOGLE</style>
                <reflowLongStrings>false</reflowLongStrings> <!-- optional -->
                <formatJavadoc>false</formatJavadoc>         <!-- optional -->
              </googleJavaFormat>
              <formatAnnotations/>
              <removeUnusedImports/>
            </java>
            <!-- https://github.com/diffplug/spotless/tree/main/plugin-maven#maven-pom -->
            <pom>
              <includes>
                <include>pom.xml</include>
              </includes>
            </pom>
          </configuration>
        </plugin>
        <!--
        Versions Maven Plugin
        https://www.mojohaus.org/versions-maven-plugin/
        -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>2.17.1</version>
          <configuration>
            <ruleSet>
              <ignoreVersion>
                <type>regex</type>
                <version>.*[-_\.](alpha|Alpha|ALPHA|b|beta|Beta|BETA|rc|RC|CR|M|EA|AM|preview)[-_\.]?\d*</version>
              </ignoreVersion>
            </ruleSet>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
